<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detail_posterImg"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/ic_broken_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/detail_posterTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/muli_extrabold"
            android:shadowColor="@color/black"
            android:text="@string/movies_name"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/detail_posterImg"
            app:layout_constraintEnd_toStartOf="@+id/detailFavoriteButton"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/detail_Img"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_loading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_posterImg"
            android:contentDescription="@string/desc_gambar_poster" />

        <TextView
            android:id="@+id/detail_movies_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/movies_name"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/muli_extrabold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_Img"
            app:layout_constraintTop_toBottomOf="@+id/detail_posterImg" />

        <TextView
            android:id="@+id/detail_releasedYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/released_year"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:fontFamily="@font/muli"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_Img"
            app:layout_constraintTop_toBottomOf="@+id/detail_movies_name" />


        <TextView
            android:id="@+id/detail_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:text="@string/rating"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/muli"
            app:drawableStartCompat="@drawable/ic_star_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_Img"
            app:layout_constraintTop_toBottomOf="@+id/detail_releasedYear" />

        <TextView
            android:id="@+id/detail_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/synopsis"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/muli_extrabold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_Img" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/description"
            android:textSize="12sp"
            android:fontFamily="@font/muli"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_synopsis" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/detailFavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_favorite_border"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="@+id/detail_posterImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/tombol_favorite" />

        <ProgressBar
            android:id="@+id/loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>